[package]
name = "stellar_analysis"
version = "0.5.0"
authors = ["Charmaine Ndolo <Charmaine.Ndolo@hu-berlin.de>", "Martin Florian <martin.florian@hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[dependencies]
fbas_analyzer = { version = "0.6", default-features = false }
console_error_panic_hook = "0.1.1"
web-sys = { version = "0.3", features = ['console']}
serde_json = "1.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
lazy_static = "1.4.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
js-sys = "0.3.50"
